# sdl-multiplayer-game

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  TODO  client  server
cglm/: cglmConfig.cmake
resources/shaders/: boat_frag.glsl  bullet_frag.glsl  bullet_vert.glsl  hp_frag.glsl  hp_vert.glsl  water_frag.glsl  water_vert.glsl
src/: client.c  collision_queue.c  collision_queue.h  game_window.c  game_window.h  server.c
src/client/: client.c  client.h
src/common/: client_common.h  collisions.c  collisions.h  common.h  hashset.c  hashset.h
src/server/: bullet_hell_mode.c  bullet_hell_mode.h  server.c  server.h
